project 4: music Website

--- a/project4/html/index.html
+++ b/project4/html/index.html
@@ -90,9 +90,25 @@
         </div>
         <div class="gift-card">
             <div class="gcards">
-                <img src="../images/card.png" alt="">
+                <img src="../images/card-removebg-preview.png" alt="">
             </div>
-            <div class="gcards-details"></div>
+            <div class="gcards-details">
+                <div class="card-title">
+                    Gift Cards
+                </div>
+                <div class="card-desc">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque expedita tempore quasi omnis a aut
+                    et totam illo fuga accusamus dolorum vero, ut harum consectetur. Minima molestias officiis culpa non
+                    sed dicta itaque. Et aliquam illo obcaecati molestias veritatis porro.
+                </div>
+                <div class="card-que">
+                    Already have an Orange MyTunes Music Gift Card?
+                </div>
+                <hr>
+                <div class="card-box">
+                    Redeem
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/f32bba05c3.js" crossorigin="anonymous"></script>
